syntax = "proto3";
package dfinance.vm.v1beta1;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "gogoproto/gogo.proto";

import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/dfinance/dstation/x/vm/types";

message GenesisState {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  message WriteOp {
    option (gogoproto.equal) = false;
    option (gogoproto.goproto_getters) = false;
    option (gogoproto.goproto_stringer) = false;

    // Move address (HEX string)
    string address = 1 [
      (gogoproto.moretags) = "yaml:\"address\""
    ];

    // Move module path (HEX string)
    string path = 2 [
      (gogoproto.moretags) = "yaml:\"path\""
    ];

    // Module code (HEX string)
    string value = 3 [
      (gogoproto.moretags) = "yaml:\"value\""
    ];
  }

  repeated WriteOp write_set = 1 [
    (gogoproto.moretags) = "yaml:\"write_set\"",
    (gogoproto.nullable) = false
  ];
}
